--- a/Forms/main.html
+++ b/Forms/main.html
@@ -16,8 +16,26 @@
 </head>
 <body style="padding-top: 80px">
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="navbar-heading">
-            <a href class="navbar-brand">Claimsuite</a>
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href class="navbar-brand">Claimsuite</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#/home">Home</a>
+                    </li>
+                    <li>
+                        <a href="#/entities">Entities</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <div class="container">
