--- a/Forms/main.html
+++ b/Forms/main.html
@@ -46,5 +46,6 @@
     <script src="scripts/ngStorage.min.js"></script>
     <script src="scripts/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script src="scripts/app/app.js"></script>
+    <script src="scripts/app/controls.js"></script>
 </body>
 </html>
