--- a/Forms/main.html
+++ b/Forms/main.html
@@ -34,6 +34,9 @@
                     <li>
                         <a href="#/entities">Entities</a>
                     </li>
+                    <li>
+                        <a href="#/incident">Incident</a>
+                    </li>
                 </ul>
             </div>
         </div>
