--- a/Forms/main.html
+++ b/Forms/main.html
@@ -13,6 +13,7 @@
     <title>Claimsuite</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/mg.css" />
 </head>
 <body style="padding-top: 80px">
     <nav class="navbar navbar-default navbar-fixed-top">
