--- a/Forms/main.html
+++ b/Forms/main.html
@@ -58,6 +58,7 @@
     <script src="scripts/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script src="scripts/app/app.js"></script>
     <script src="scripts/app/controls.js"></script>
+    <script src="scripts/app/dbController.js"></script>
     <script type="text/ng-template" id="/messageBox.html">
         <div class="modal-header">
             <h4>
